# omnizart

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: doc-build.yml  general.yml
omnizart/: base.py  io.py
omnizart/vocal/: app.py
scripts/: install.sh
tests/: conftest.py
