[tool.poetry]
name = "omnizart"
version = "0.5.0"
description = "Omniscient Mozart, being able to transcribe everything in the music."
readme = "README.md"
authors = ["BreezeWhite <miyashita2010@tuta.io>", "yjlolo <yjlolo125@gmail.com>"]
license = "MIT"
repository = "https://github.com/Music-and-Culture-Technology-Lab/omnizart"
documentation = "https://music-and-culture-technology-lab.github.io/omnizart-doc/"
homepage = "https://sites.google.com/view/mctl/home"
keywords = ["automatic music transcription", "drum transcription", "vocal transcription", "beat tracking"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Version Control :: Git",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",

]
exclude = ["weights*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.0.0"
pretty_midi = "^0.2.9"
librosa = "^0.10.0"
madmom = "^0.16.1"
pillow = "^10.0.0"
pyyaml = "^6.0"
jsonschema = "^4.0.0"
tqdm = "^4.65.0"
pyfluidsynth = "^1.3.0"
vamp = "^1.1.0"
urllib3 = "^1.26.0"
demucs = "^4.0.0"
mir_eval = "^0.7"
tensorflow = "^2.13.0,<2.17.0"
torch = "^2.0.0"
torchaudio = "^2.0.0"
numpy = "^1.21.0,<2.0.0"
scipy = "^1.7.0"
h5py = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^6.0.0"
pylint = "^2.17.0"
black = "^23.0.0"
numpydoc = "^1.5.0"
yapf = "^0.32.0"
sphinx-press-theme = "^0.8.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
sphinx-click = "^4.0.0"
sphinxcontrib-bibtex = "^2.5.0"

[tool.poetry.scripts]
omnizart = 'omnizart.cli.cli:entry'

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

